apps/vite/src/pages/tech/k8s/02-portainer/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: portainer
  namespace: portainer
spec:
  ingressClassName: nginx
  rules:
  - host: p.s.4a.software
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: portainer
            port:
              number: 9000
